examples/test/testpolicy9798.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9798
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key7: value41
      key15: value31
      key36: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value7
          key6: value27
      podSelector:
        matchLabels:
          key14: value33
